--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
   <section class="cards">
     <div class="card">
-      <img src="/tugasweb/aset/download (20).jpg" alt="Beauty" style="height: 15rem; object-fit: cover;"/>
+      <img src="download (20).jpg" alt="Beauty" style="height: 15rem; object-fit: cover;"/>
       <h2>Beauty</h2>
       <p>We strive to create the most beautiful websites for all your needs. Working closely with you to design and develop an amazing website for your business.</p>
     </div>
     <div class="card">
-      <img src="/tugasweb/aset/Minecraft ☾.jpg" alt="Beauty" style="height: 15rem; object-fit: cover;"/>
+      <img src="Minecraft ☾.jpg" alt="Beauty" style="height: 15rem; object-fit: cover;"/>
       <h2>Construction</h2>
       <p>Built by our team of professional developers, we ensure the most rigourous and modern websites. Built from scratch using HTML and CSS. Only the best for you.</p>
     </div>
